--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,6 @@ android:
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-21
+
+before_install:
+ - chmod +x gradlew
