--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,16 @@ android {
     }
     productFlavors {
     }
+
 }
+
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.google.android.gms:play-services:7.3.0'
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.afollestad:material-dialogs:0.7.4.2'
+
+    compile 'com.jayway.android.robotium:robotium-solo:5.2.1'
+
 }
