--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: android
+env:
+  global:
+    - ANDROID_API_LEVEL=21
+    - ANDROID_BUILD_TOOLS_VERSION=21.1.2
+    - ANDROID_ABI=google_apis/armeabi-v7a
+    - ADB_INSTALL_TIMEOUT=8 # minutes (2 minutes by default - see #247)
 android:
   components:
     # Uncomment the lines below if you want to
@@ -6,11 +12,8 @@ android:
     # - platform-tools
     # - tools
 
-    # The BuildTools version used by your project
-    - build-tools-21.1.1
-
-    # The SDK version used to compile your project
-    - android-21
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - android-$ANDROID_API_LEVEL
 
     # Additional components
     - extra-google-google_play_services
@@ -18,16 +21,18 @@ android:
     - extra-android-m2repository
     - addon-google_apis-google-21
 
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    # - sys-img-armeabi-v7a-android-21
+    # Specify at least one system image
+    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
 
 before_install:
  - chmod +x gradlew
 
 before_script:
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  # Create and start emulator
+  - echo no | android create avd --force -n test -t "Google Inc.:Google APIs:"$ANDROID_API_LEVEL --abi $ANDROID_ABI
   - emulator -avd test -no-skin -no-audio -no-window &
+
+
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
