--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ env:
     - ANDROID_API_LEVEL=21
     - ANDROID_BUILD_TOOLS_VERSION=21.1.2
     - ANDROID_ABI=google_apis/armeabi-v7a
-    - ADB_INSTALL_TIMEOUT=8 # minutes (2 minutes by default - see #247)
+    - ADB_INSTALL_TIMEOUT=10 # minutes (2 minutes by default - see #247)
 android:
   components:
     # Uncomment the lines below if you want to
@@ -37,4 +37,4 @@ before_script:
   - adb shell input keyevent 82 &
 
 script:
-    - ./gradlew build connectedCheck --stacktrace
+    - ./gradlew build connectedAndroidTest --stacktrace
