--- a/.travis.yml
+++ b/.travis.yml
@@ -1,44 +1,36 @@
 language: android
-# Turn off caching to avoid any caching problems
 cache: false
-# Use the Travis Container-Based Infrastructure (see #203)
 sudo: false
 env:
   global:
-    - ANDROID_API_LEVEL=21
-    - ANDROID_BUILD_TOOLS_VERSION=21.1.2
-    - ANDROID_ABI=google_apis/armeabi-v7a
-    - ADB_INSTALL_TIMEOUT=8 # minutes (2 minutes by default - see #247)
+  - ANDROID_API_LEVEL=21
+  - ANDROID_BUILD_TOOLS_VERSION=21.1.2
+  - ANDROID_ABI=google_apis/armeabi-v7a
+  - ADB_INSTALL_TIMEOUT=8
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - platform-tools
-    # - tools
-
-    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-    - android-$ANDROID_API_LEVEL
-
-    # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - addon-google_apis-google-21
-
-    # Specify at least one system image
-    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
-
+  - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+  - android-$ANDROID_API_LEVEL
+  - extra-google-google_play_services
+  - extra-google-m2repository
+  - extra-android-m2repository
+  - addon-google_apis-google-21
+  - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
 before_install:
- - chmod +x gradlew
-
+- chmod +x gradlew
 before_script:
-  # Create and start emulator
-  - echo no | android create avd --force -n test -t "Google Inc.:Google APIs:"$ANDROID_API_LEVEL --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio -no-window &
-
-
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
-
+- echo no | android create avd --force -n test -t "Google Inc.:Google APIs:"$ANDROID_API_LEVEL
+  --abi $ANDROID_ABI
+- emulator -avd test -no-skin -no-audio -no-window &
+- android-wait-for-emulator
+- adb shell input keyevent 82 &
 script:
-    - ./gradlew build connectedCheck --stacktrace --info -PdisablePreDex
+- "./gradlew build connectedCheck --stacktrace -PdisablePreDex"
+#deploy:
+#  provider: releases
+#  skip_cleanup: true
+#  api_key:
+#    secure: GsUyfEg9srkHLw4wJp+BaYayHSrvGUt6pehSQ5N//KoFsWeG2DFRS0i6/NteIsRmjPJ+Pye9TsgGu3TaKJCQH0YOPaQza6GBVeA+jccgfRVwapzq0SM6Op1U+OmGABJ0vFHgvsXDTLX8L2fTSCsm/zUsQXMP/LPo8gsHMEVK0gY=
+#  file: file:///home/travis/build/J-Bossi/Geolarm/app/build/outputs/reports/*
+#  on:
+#    repo: J-Bossi/Geolarm
