--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
   - ANDROID_API_LEVEL=21
   - ANDROID_BUILD_TOOLS_VERSION=21.1.2
   - ANDROID_ABI=google_apis/armeabi-v7a
-  - ADB_INSTALL_TIMEOUT=8
+  - ADB_INSTALL_TIMEOUT=16
 android:
   components:
   - build-tools-$ANDROID_BUILD_TOOLS_VERSION
@@ -22,8 +22,9 @@ before_script:
 - echo no | android create avd --force -n test -t "Google Inc.:Google APIs:"$ANDROID_API_LEVEL
   --abi $ANDROID_ABI
 - emulator -avd test -no-skin -no-audio -no-window &
-- android-wait-for-emulator
+- ./wait_for_emulator.sh
 - adb shell input keyevent 82 &
+- sleep 10
 script:
 - "./gradlew build connectedCheck --stacktrace -PdisablePreDex"
 #deploy:
