--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_script:
 - echo no | android create avd --force -n test -t "Google Inc.:Google APIs:"$ANDROID_API_LEVEL
   --abi $ANDROID_ABI
 - emulator -avd test -no-skin -no-audio -no-window &
+- chmod +x wait_for_emulator.sh
 - ./wait_for_emulator.sh
 - adb shell input keyevent 82 &
 - sleep 10
