--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".AlarmList"
+            android:label="@string/app_name"></activity>
+        <activity
             android:name=".AlarmReceiver"
             android:label="@string/app_name">
             <intent-filter>
