--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     signingConfigs {
@@ -25,6 +26,12 @@ android {
 
 }
 
+
+repositories {
+    // Currently, Dagger 2 is published to Sonatype's maven repo
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+}
+
 project.ext.preDexLibs = !project.hasProperty('disablePreDex')
 
 subprojects {
@@ -47,6 +54,7 @@ dependencies {
     compile 'com.jayway.android.robotium:robotium-solo:5.2.1'
 
     compile 'com.google.dagger:dagger:2.0'
+    apt 'com.google.dagger:dagger-compiler:2.0'
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
 }
