--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:7.3.0'
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.afollestad:material-dialogs:0.7.4.2'
-
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.0.1'
     compile 'com.jayway.android.robotium:robotium-solo:5.2.1'
 
     compile 'com.google.dagger:dagger:2.0'
