--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     compile 'com.afollestad:material-dialogs:0.7.4.2'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.0.1'
     compile 'com.jayway.android.robotium:robotium-solo:5.2.1'
-
+    compile 'com.google.code.gson:gson:2.3'
     compile 'com.google.dagger:dagger:2.0'
     apt 'com.google.dagger:dagger-compiler:2.0'
     provided 'org.glassfish:javax.annotation:10.0-b28'
