--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyD9gIM3Kn08hMOoEjR3z05TO3i34oBkdaM" />
         <activity
-            android:name="de.jbossi.geolarm.MapsActivity"
+            android:name=".activities.MapsActivity"
             android:label="@string/title_activity_maps" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,17 +38,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AlarmList"
+            android:name=".activities.AlarmList"
             android:label="@string/app_name"></activity>
         <activity
-            android:name=".AlarmReceiver"
+            android:name=".activities.AlarmReceiver"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
 
-        <service android:name=".GeofenceTransitionsIntentService" />
+        <service android:name=".services.GeofenceTransitionsIntentService" />
     </application>
 
 
