--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ cache: false
 sudo: false
 env:
   global:
-  - ANDROID_API_LEVEL=22
-  - ANDROID_BUILD_TOOLS_VERSION=22.0.0
+  - ANDROID_API_LEVEL=21
+  - ANDROID_BUILD_TOOLS_VERSION=22.0.1
   - ANDROID_ABI=google_apis/armeabi-v7a
   - ADB_INSTALL_TIMEOUT=16
 android:
@@ -27,7 +27,9 @@ before_script:
 - adb shell input keyevent 82 &
 - sleep 10
 script:
+- android list target
 - "./gradlew build connectedCheck --stacktrace -PdisablePreDex"
+
 #deploy:
 #  provider: releases
 #  skip_cleanup: true
