--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ cache: false
 sudo: false
 env:
   global:
-  - ANDROID_API_LEVEL=21
+  - ANDROID_API_LEVEL=22
   - ANDROID_BUILD_TOOLS_VERSION=22.0.1
   - ANDROID_ABI=google_apis/armeabi-v7a
   - ADB_INSTALL_TIMEOUT=16
@@ -19,7 +19,8 @@ android:
 before_install:
 - chmod +x gradlew
 before_script:
-- echo no | android create avd --force -n test -t "Google Inc.:Google APIs:"$ANDROID_API_LEVEL
+- android list target
+- echo no | android create avd --force -n test -t "Google Inc.:Google APIs:21"
   --abi $ANDROID_ABI
 - emulator -avd test -no-skin -no-audio -no-window &
 - chmod +x wait_for_emulator.sh
@@ -27,7 +28,7 @@ before_script:
 - adb shell input keyevent 82 &
 - sleep 10
 script:
-- android list target
+
 - "./gradlew build connectedCheck --stacktrace -PdisablePreDex"
 
 #deploy:
