--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,23 @@ cache: false
 sudo: false
 env:
   global:
-  - ANDROID_API_LEVEL=22
-  - ANDROID_BUILD_TOOLS_VERSION=22.0.1
+
   - ANDROID_ABI=google_apis/armeabi-v7a
   - ADB_INSTALL_TIMEOUT=16
 android:
   components:
-  - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-  - android-$ANDROID_API_LEVEL
+  - build-tools-22.0.1
+  - android-22
   - extra-google-google_play_services
   - extra-google-m2repository
   - extra-android-m2repository
-  - addon-google_apis-google-22
-  - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+  - addon-google_apis-google-21
+  - sys-img-armeabi-v7a-addon-google_apis-google-21
 before_install:
 - chmod +x gradlew
 before_script:
 - android list target
-- echo no | android create avd --force -n test -t "Google Inc.:Google APIs:22"
+- echo no | android create avd --force -n test -t "Google Inc.:Google APIs:21"
   --abi $ANDROID_ABI
 - emulator -avd test -no-skin -no-audio -no-window &
 - chmod +x wait_for_emulator.sh
