Try to start in geofence and to fire event

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".services.GeofenceTransitionsIntentService" />
+        <service android:name=".services.GeofenceTransitionsIntentService" android:exported="true"/>
     </application>
 
 
