--- a/.travis.yml
+++ b/.travis.yml
@@ -3,38 +3,29 @@ cache: false
 sudo: false
 env:
   global:
-
-  - ANDROID_ABI=google_apis/armeabi-v7a
   - ADB_INSTALL_TIMEOUT=16
 android:
   components:
-  - build-tools-24.0.2
+  - build-tools-22.0.1
   - android-21
   - extra-google-google_play_services
   - extra-google-m2repository
   - extra-android-m2repository
   - addon-google_apis-google-21
   - sys-img-armeabi-v7a-addon-google_apis-google-21
+
 before_install:
 - chmod +x gradlew
-before_script:
 - android list target
 - echo no | android create avd --force -n test -t "Google Inc.:Google APIs:21"
-  --abi $ANDROID_ABI
+  --abi google_apis/armeabi-v7a
 - emulator -avd test -no-skin -no-audio -no-window &
-- chmod +x wait_for_emulator.sh
-- ./wait_for_emulator.sh
+
+before_script:
+- android-wait-for-emulator
 - adb shell input keyevent 82 &
-- sleep 10
+
 script:
 
 - "./gradlew build connectedCheck --stacktrace --continue -PdisablePreDex"
 
-#deploy:
-#  provider: releases
-#  skip_cleanup: true
-#  api_key:
-#    secure: GsUyfEg9srkHLw4wJp+BaYayHSrvGUt6pehSQ5N//KoFsWeG2DFRS0i6/NteIsRmjPJ+Pye9TsgGu3TaKJCQH0YOPaQza6GBVeA+jccgfRVwapzq0SM6Op1U+OmGABJ0vFHgvsXDTLX8L2fTSCsm/zUsQXMP/LPo8gsHMEVK0gY=
-#  file: file:///home/travis/build/J-Bossi/Geolarm/app/build/outputs/reports/*
-#  on:
-#    repo: J-Bossi/Geolarm
