--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,11 @@ script:
 
 - "./gradlew build connectedCheck --stacktrace --continue -PdisablePreDex"
 
+ deploy:
+   provider: releases
+   api_key:
+     secure: GsUyfEg9srkHLw4wJp+BaYayHSrvGUt6pehSQ5N//KoFsWeG2DFRS0i6/NteIsRmjPJ+Pye9TsgGu3TaKJCQH0YOPaQza6GBVeA+jccgfRVwapzq0SM6Op1U+OmGABJ0vFHgvsXDTLX8L2fTSCsm/zUsQXMP/LPo8gsHMEVK0gY=
+   file: file:///home/travis/build/J-Bossi/Geolarm/app/build/outputs/*
+   skip_cleanup: true
+   on:
+     tags: true
