--- a/.travis.yml
+++ b/.travis.yml
@@ -34,13 +34,13 @@ script:
 after_script:
 
 
-deploy:
-  provider: s3
-  access_key_id: "AKIAI4YNVFFTK52NOR4A"
-  secret_access_key: "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"
-  bucket: "geolarm"
-  region: eu-central-1
-  endpoint: s3-eu-central-1.amazonaws.com
-  file: file:///home/travis/build/J-Bossi/Geolarm/app/build/outputs/*
-  skip_cleanup: true
+#deploy:
+#  provider: s3
+#  access_key_id: "AKIAI4YNVFFTK52NOR4A"
+#  secret_access_key: "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"
+#  bucket: "geolarm"
+#  region: eu-central-1
+#  endpoint: s3-eu-central-1.amazonaws.com
+#  file: file:///home/travis/build/J-Bossi/Geolarm/app/build/outputs/*
+#  skip_cleanup: true
 
