--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,11 @@ before_script:
 
 - adb logcat &
 - adb shell input keyevent 82
+- sleep 30
 - adb shell settings put secure location_providers_allowed network,gps
+- sleep 30
 - adb shell input keyevent 22
+- sleep 10
 - adb shell input keyevent 23
 
 
