--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,13 @@ before_install:
 - echo no | android create avd --force -n test -t "Google Inc.:Google APIs:21"
   --abi google_apis/armeabi-v7a
 - emulator -avd test -no-skin -no-audio -no-window &
-- android-wait-for-emulator
+- chmod +x wait_for_amulator.sh
+- ./wait_for_emulator.sh
+- sleep 30
 
 before_script:
 
-- adb logcat &
+- adb logcat
 - adb shell input keyevent 82
 - sleep 30
 - adb shell settings put secure location_providers_allowed network,gps
