--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
 - echo no | android create avd --force -n test -t "Google Inc.:Google APIs:21"
   --abi google_apis/armeabi-v7a
 - emulator -avd test -no-skin -no-audio -no-window &
-- chmod +x wait_for_amulator.sh
+- chmod +x wait_for_emulator.sh
 - ./wait_for_emulator.sh
 - sleep 30
 
