--- a/.travis.yml
+++ b/.travis.yml
@@ -27,13 +27,13 @@ before_install:
 before_script:
 
 - adb logcat
-- adb shell input keyevent 82
+- adb shell input keyevent 82 &
 - sleep 30
-- adb shell settings put secure location_providers_allowed network,gps
+- adb shell settings put secure location_providers_allowed network,gps &
 - sleep 30
-- adb shell input keyevent 22
+- adb shell input keyevent 22 &
 - sleep 10
-- adb shell input keyevent 23
+- adb shell input keyevent 23 &
 
 
 script:
