--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
 
 before_script:
 
-- adb logcat
+- adb logcat &
 - adb shell input keyevent 82 &
 - sleep 30
 - adb shell settings put secure location_providers_allowed network,gps &
