--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_script:
 - sleep 30
 - adb shell input keyevent 22 &
 - sleep 10
-- adb shell input keyevent 23 &
+- adb shell input keyevent 23
 
 
 script:
