--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,9 @@ before_script:
 - sleep 30
 - adb shell input keyevent 22 &
 - sleep 10
-- adb shell input keyevent 23
+- adb shell input keyevent 23 &
+- sleep 10
+- adb shell restart
 
 
 script:
