--- a/.travis.yml
+++ b/.travis.yml
@@ -29,13 +29,15 @@ before_script:
 - adb logcat &
 - adb shell input keyevent 82 &
 - sleep 30
-- adb shell settings put secure location_providers_allowed network,gps &
+- adb shell settings put secure location_providers_allowed off &
+- sleep 30
+- adb shell settings put secure location_providers_allowed network,gps,wifi &
 - sleep 30
 - adb shell input keyevent 22 &
 - sleep 10
-- adb shell input keyevent 23 &
+- adb shell input keyevent 23
 - sleep 10
-- adb shell restart
+
 
 
 script:
