--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
 - emulator -avd test -no-skin -no-audio -no-window &
 - chmod +x wait_for_emulator.sh
 #- ./wait_for_emulator.sh
-- adb wait-for-device
+- android-wait-for-emulator
 - sleep 30
 - adb logcat &
 - adb shell input keyevent 82 &
@@ -30,7 +30,11 @@ before_install:
 
 before_script:
 
-- adb shell settings put secure location_providers_allowed network,gps,wifi &
+- adb shell settings put secure location_provider_allowed network,gps,wifi &
+- sleep 30
+- adb shell input keyevent 22 &
+- sleep 10
+- adb shell input keyevent 23 &
 
 
 
