--- a/.travis.yml
+++ b/.travis.yml
@@ -30,11 +30,7 @@ before_install:
 
 before_script:
 
-- adb shell settings put secure location_provider_allowed network,gps,wifi &
-- sleep 30
-- adb shell input keyevent 22 &
-- sleep 10
-- adb shell input keyevent 23 &
+
 
 
 
@@ -42,6 +38,9 @@ script:
 
 
 - "./gradlew build connectedCheck --stacktrace --continue -PdisablePreDex"
+- adb shell settings put secure location_provider_allowed network,gps,wifi
+- adb shell input keyevent 22
+- adb shell input keyevent 23
 
 after_script:
 #deploy:
