--- a/.travis.yml
+++ b/.travis.yml
@@ -24,16 +24,16 @@ before_install:
 #- ./wait_for_emulator.sh
 - android-wait-for-emulator
 - sleep 30
-- adb shell settings put secure location_providers_allowed network,gps,wifi &
-- sleep 30
 - adb shell input keyevent 82 &
 - sleep 30
+- adb shell settings put secure location_providers_allowed network &
+- sleep 60
 - adb shell input keyevent 22 &
-- sleep 30
+- sleep 10
 - adb shell input keyevent 22 &
-- sleep 30
+- sleep 10
 - adb shell input keyevent 23 &
-- sleep 30
+- sleep 10
 
 before_script:
 
