--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ before_install:
 #- ./wait_for_emulator.sh
 - android-wait-for-emulator
 - sleep 30
+- adb logcat &
 - adb shell input keyevent 82 &
 - sleep 30
 - adb shell settings put secure location_providers_allowed network &
