--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
 - android-wait-for-emulator
 - sleep 30
 - adb logcat &
-- adb shell settings put secure location_providers_allowed network,gps,wifi &
+- adb shell settings put secure location_providers_allowed gps,network &
 - sleep 60
 - adb shell input keyevent 82 &
 - sleep 30
