--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,12 +52,15 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.google.android.gms:play-services-maps:7.5.0'
     compile 'com.google.android.gms:play-services-location:7.5.0'
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.afollestad:material-dialogs:0.7.4.2'
+
+    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:cardview-v7:22.2.1'
+
+
     compile 'com.fasterxml.jackson.core:jackson-core:2.5.3'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.5.3'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.3'
-
+    compile 'com.github.rey5137:material:1.2.1'
 
     compile 'com.jayway.android.robotium:robotium-solo:5.2.1'
 
