--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,13 @@ android {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
     }
-    signingConfigs {
-    }
-    compileSdkVersion 21
-    buildToolsVersion "22.0.1"
+
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
     defaultConfig {
         applicationId "de.jbossi.geolarm"
         minSdkVersion 21
-        targetSdkVersion 21
+        targetSdkVersion 23
         versionCode 1
         versionName '0.1'
     }
@@ -29,11 +28,6 @@ android {
 
 }
 
-project.gradle.taskGraph.whenReady {
-    connectedAndroidTest {
-        ignoreFailures = true
-    }
-}
 
 project.ext.preDexLibs = !project.hasProperty('disablePreDex')
 
@@ -50,11 +44,11 @@ subprojects {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.google.android.gms:play-services-maps:7.5.0'
-    compile 'com.google.android.gms:play-services-location:7.5.0'
+    compile 'com.google.android.gms:play-services-maps:8.3.0'
+    compile 'com.google.android.gms:play-services-location:8.3.0'
 
-    compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.android.support:recyclerview-v7:21.0.+'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
 
 
     compile 'com.fasterxml.jackson.core:jackson-core:2.5.3'
