--- a/.travis.yml
+++ b/.travis.yml
@@ -4,36 +4,63 @@ sudo: false
 env:
   global:
   - ADB_INSTALL_TIMEOUT=30
-android:
-  components:
-  - build-tools-23.0.2
-  - android-23
-  - extra-google-google_play_services
-  - extra-google-m2repository
-  - extra-android-m2repository
-  - addon-google_apis-google-22
-  - sys-img-armeabi-v7a-addon-google_apis-google-23
+  - INSTALL_PKGS='build-tools-23.0.2,android-23'
+  - UPDATE_PKGS='platform-tools,tools,extra-android-m2repository,extra-google-m2repository'
+  - GRADLE_USER_HOME="${TRAVIS_BUILD_DIR}/gradle"
+
+
+matrix:
+  include:
+    - env: AVD_TARGET=android-19
+    - env: AVD_TARGET=android-21
+    - env: AVD_TARGET=android-23
+           TARGET_PKGS=sys-img-armeabi-v7a-android-23
+    - env: AVD_TARGET='Google Inc.:Google APIs:23' AVD_TAG=google_apis
+           TARGET_PKGS=addon-google_apis-google-23,sys-img-armeabi-v7a-addon-google_apis-google-23
+  allow_failures:
+    - env: AVD_TARGET=android-23
+           TARGET_PKGS=sys-img-armeabi-v7a-android-23
+    - env: AVD_TARGET='Google Inc.:Google APIs:23' AVD_TAG=google_apis
+           TARGET_PKGS=addon-google_apis-google-23,sys-img-armeabi-v7a-addon-google_apis-google-23
+  fast_finish: true
+
+
+#android:
+#  components:
+#  - build-tools-23.0.2
+#  - android-23
+#  - extra-google-google_play_services
+#  - extra-google-m2repository
+#  - extra-android-m2repository
+#  - addon-google_apis-google-22
+#  - sys-img-armeabi-v7a-addon-google_apis-google-23
 
 before_install:
 - chmod +x gradlew
 - android list target
-- echo no | android create avd --force -n test -t "Google Inc.:Google APIs:22"
-  --abi google_apis/armeabi-v7a
-- emulator -avd test -no-skin -no-audio -no-window &
-- chmod +x wait_for_emulator.sh
+- ./execute install-and-update-sdk
+- ./execute create-and-start-device wait-for-device-online
+
+#- echo no | android create avd --force -n test -t "Google Inc.:Google APIs:22"
+#  --abi google_apis/armeabi-v7a
+#- emulator -avd test -no-skin -no-audio -no-window &
+#- chmod +x wait_for_emulator.sh
 #- ./wait_for_emulator.sh
-- android-wait-for-emulator
-- sleep 30
-- adb logcat &
-- adb shell settings put secure location_providers_allowed gps,network &
-- sleep 60
-- adb shell input keyevent 82 &
-- sleep 10
-- adb shell input keyevent 22 &
-- sleep 10
-- adb shell input keyevent 22 &
-- sleep 10
-- adb shell input keyevent 23 &
+#- android-wait-for-emulator
+#- sleep 30
+
+before_script:
+  - ./execute wait-for-device-ready
+  - adb logcat &
+  - adb shell settings put secure location_providers_allowed gps,network &
+  - sleep 60
+  - adb shell input keyevent 82 &
+  - sleep 10
+  - adb shell input keyevent 22 &
+  - sleep 10
+  - adb shell input keyevent 22 &
+  - sleep 10
+  - adb shell input keyevent 23 &
 
 script:
 - "./gradlew build connectedCheck --stacktrace --continue -PdisablePreDex"
