--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,18 @@ env:
   - ADB_INSTALL_TIMEOUT=30
   - ANDROID_BUILD_TOOLS_VERSION=23.0.2
   - ANDROID_ABI=google_apis/armeabi-v7a
-  - ANDROID_API_LEVEL=23
 
 matrix:
   include:
-    - env: EMULATOR_API_LEVEL=21
-    - env: EMULATOR_API_LEVEL=23
-    - env: ANDROID_API_LEVEL=23
-    - env: ANDROID_API_LEVEL=21
+    - env: EMULATOR_API_LEVEL=21 ANDROID_API_LEVEL=21
+    - env: EMULATOR_API_LEVEL=21 ANDROID_API_LEVEL=23
+    - env: EMULATOR_API_LEVEL=23 ANDROID_API_LEVEL=21
+    - env: EMULATOR_API_LEVEL=23 ANDROID_API_LEVEL=23
+
 
   allow_failures:
-    - env: EMULATOR_API_LEVEL=23
-    - env: ANDROID_API_LEVEL=23
+    - env: EMULATOR_API_LEVEL=23 ANDROID_API_LEVEL=23
+    - env: EMULATOR_API_LEVEL=21 ANDROID_API_LEVEL=23
 
 android:
   components:
