--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,10 +37,10 @@
             android:name=".activities.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity
-            android:name=".activities.AlarmList"
+            android:name=".activities.AlarmListActivity"
             android:label="@string/app_name" />
         <activity
-            android:name=".activities.AlarmReceiver"
+            android:name=".activities.AlarmReceiverActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
